--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,5 +19,6 @@ h3 {
 
 h4 {
     padding: 16px;
+    padding-bottom: 0;
     color: $darkestGray;
 }
